<resources>
    <string name="search">search</string>
    <string name="textNickname">enter the player\'s nickname</string>
    <string name="back">Back</string>
    <string name="usernameView">Username:</string>
    <string name="performancePointView">Performance Point:</string>
    <string name="countryView">Country:</string>
    <string name="globalRankView">Global Rank:</string>
    <string name="accuracy">accuracy</string>
    <string name="title">title</string>
    <string name="artist">artist</string>
    <string name="mods">mods</string>
    <string name="accuracy_result">%s \%</string>
    <string name="pp">pp</string>
    <string name="hitAccuracy">Accuracy:</string>
    <string name="difficulty">difficulty</string>
    <string name="username">username</string>
    <string name="country">country</string>
    <string name="profileAccuracy">accuracy</string>
    <string name="globalRank">Global Rank</string>
    <string name="performance">performance</string>
</resources>